--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         show-progress: "false"
+        submodules: recursive
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -30,3 +31,21 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        cache: yarn
+        cache-dependency-path: lemmy-js-client/yarn.lock
+
+    - name: Generate docs.json
+      working-directory: lemmy-js-client
+      run: |
+        yarn install
+        yarn run docs --json ../docs.json
+
+    - name: Generate Lemmy API code
+      run: go run cmd/gen/main.go -json-file docs.json -out-dir .
+
+    - name: Check that generated files are not changed
+      run: git diff --exit-code
